fix: align top navigation bar items to the left

--- a/src/components/MegaMenu/MegaMenu.css
+++ b/src/components/MegaMenu/MegaMenu.css
@@ -25,7 +25,7 @@
   display: flex;
   align-items: center;
   flex: 1;
-  justify-content: center;
+  justify-content: flex-start;
 }
 
 .mega-menu-right {
